--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/yup": "^0.29.10",
     "formik": "^2.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +19,7 @@
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.6"
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
